Fixed center align for year nav in desktop view

--- a/angular/src/app/game-gallery/year-nav/year-nav.component.css
+++ b/angular/src/app/game-gallery/year-nav/year-nav.component.css
@@ -45,6 +45,10 @@
 }
 
 @media (min-width: 769px) {
+    div {
+        text-align: center;
+    }
+
 	.last-decade-button {
         display: inline-block;
         vertical-align: super;
